--- a/asporto/index.html
+++ b/asporto/index.html
@@ -45,8 +45,8 @@
 </head>
 <body>
 <!-- navbar con hamburger -->
-	<nav>
-		<ul class="menu1" id="hamburger">
+	<nav  id="hamburger">
+		<ul class="menu1">
 			<li class="logo"><a href="https://www.beerstrot.it"><img class="img-logo" src="https://www.beerstrot.it/asset/img/svgs/logo.svg" alt="Ca' Vecchia Beerstrot"><meta itemprop="name" content="Ca' Vecchia Beerstrot"></a>
 			</li>
 			<li class="item button"><a href="https://www.beerstrot.it/prenota/">Riserva un Tavolo</a></li>
@@ -70,7 +70,7 @@
 		</div>
 		<div class="row">
 			<div class="medium-12 large-12 columns">
-				<p><strong>Dal Martedì alla Domenica</strong>.<br>Dalle <strong>19:00</strong> alle <strong>22:00</strong>.</p>
+				<p>Aperto dal <strong>Giovedì</strong> alla <strong>Domenica</strong>.<br>Dalle <strong>19:00</strong> alle <strong>21:30</strong>.</p>
 				<!-- <p style="margin-bottom: 0px;" >Nota bene:</p> -->
 				<!-- <ul class="disc">
 					<li>Dato l'elevato afflusso di ospiti al ristorante, nei mesi di luglio e agosto non riusciamo a garantire asporti dopo le 19.30.</li>
@@ -78,8 +78,8 @@
 				</ul> -->
 				<!-- <h4><strong>Giovedì</strong>, <strong>Venerdì</strong>, <strong>Domenica</strong>: dalle 19:00 alle 22:00</h4>
 				<h4><strong>Sabato</strong>: dalle 19:00 alle 20:00</strong></h4> -->
-				<span class="hide-for-small"><a role="button" href="tel:+390718853384" class="button right extra-space-aside-tab-immagini"><i class="fa fa-phone"></i> 071 8853384</a></span>
-				<span class="show-for-small"><a role="button" href="tel:+390718853384" class="button right extra-space-aside-tab-immagini"><i class="fa fa-phone"></i> Chiama</a></span>
+				<span class="hide-for-small"><a role="button" href="tel:+390718853384" class="button left extra-space-aside-tab-immagini"><i class="fa fa-phone"></i> 071 8853384</a></span>
+				<span class="show-for-small"><a role="button" href="tel:+390718853384" class="button left extra-space-aside-tab-immagini"><i class="fa fa-phone"></i> Chiama</a></span>
 			</div>
 			<div class="medium-12 large-12 columns extra-space">
 				<hr>
@@ -354,12 +354,12 @@
                         <meta itemprop="openingHours" content="Thu, Wed, Th, Fr, Sa, Su 19:00-23:00">
                         <ul class="no-bullet">
                             <li class="testo-orari">Lunedì      <span class="orari">Chiuso</span></li>
-                            <li class="testo-orari">Martedì     <span class="orari">19 - 23</span></li>
-                            <li class="testo-orari">Mercoledì   <span class="orari">19 - 23</span></li>
-                            <li class="testo-orari">Giovedì     <span class="orari">19 - 23</span></li>
-                            <li class="testo-orari">Venerdì     <span class="orari">19 - 23</span></li>
+                            <li class="testo-orari">Martedì     <span class="orari">Chiuso</span></li>
+                            <li class="testo-orari">Mercoledì   <span class="orari">Chiuso</span></li>
+                            <li class="testo-orari">Giovedì     <span class="orari">19 - 22</span></li>
+                            <li class="testo-orari">Venerdì     <span class="orari">19 - 22</span></li>
                             <li class="testo-orari">Sabato      <span class="orari">19 - 23</span></li>
-                            <li class="testo-orari">Domenica    <span class="orari">19 - 23</span></li>
+                            <li class="testo-orari">Domenica    <span class="orari">19 - 22</span></li>
                         </ul>
                     </li>
 					<li>
