--- a/menu/index.html
+++ b/menu/index.html
@@ -22,7 +22,7 @@
     <meta property="og:image:url" content="https://www.beerstrot.it/asset/img/large/menu.jpg"/>
     <link rel="icon" href="https://www.beerstrot.it/asset/img/thumbs/favicon.png">
     <link rel="canonical" href="https://www.beerstrot.it/menu/"/>
-    <link rel="stylesheet" href="https://www.beerstrot.it/css/app.css"/>
+    <link rel="stylesheet" href="../css/app.css"/>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.2/css/all.css"/>
     <link href="//cdnjs.cloudflare.com/ajax/libs/foundicons/3.0.0/foundation-icons.css" rel="stylesheet"/>
@@ -45,8 +45,8 @@
 </head>
 <body>
 <!-- inizio navbar con hamburger -->
-    <nav>
-        <ul class="menu1" id="hamburger">
+    <nav id="hamburger">
+        <ul class="menu1" >
             <li class="logo"><a href="https://www.beerstrot.it"><img class="img-logo" src="https://www.beerstrot.it/asset/img/svgs/logo.svg" alt="Ca' Vecchia Beerstrot"><meta itemprop="name" content="Ca' Vecchia Beerstrot"></a>
             </li>
             <li class="item button"><a href="https://www.beerstrot.it/prenota/">Riserva un Tavolo</a></li>
@@ -815,12 +815,12 @@
                         <meta itemprop="openingHours" content="Thu, Wed, Th, Fr, Sa, Su 19:00-23:00">
                         <ul class="no-bullet">
                             <li class="testo-orari">Lunedì      <span class="orari">Chiuso</span></li>
-                            <li class="testo-orari">Martedì     <span class="orari">19 - 23</span></li>
-                            <li class="testo-orari">Mercoledì   <span class="orari">19 - 23</span></li>
-                            <li class="testo-orari">Giovedì     <span class="orari">19 - 23</span></li>
-                            <li class="testo-orari">Venerdì     <span class="orari">19 - 23</span></li>
+                            <li class="testo-orari">Martedì     <span class="orari">Chiuso</span></li>
+                            <li class="testo-orari">Mercoledì   <span class="orari">Chiuso</span></li>
+                            <li class="testo-orari">Giovedì     <span class="orari">19 - 22</span></li>
+                            <li class="testo-orari">Venerdì     <span class="orari">19 - 22</span></li>
                             <li class="testo-orari">Sabato      <span class="orari">19 - 23</span></li>
-                            <li class="testo-orari">Domenica    <span class="orari">19 - 23</span></li>
+                            <li class="testo-orari">Domenica    <span class="orari">19 - 22</span></li>
                         </ul>
                     </li>
 		  			<li>
