--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 	<meta property="og:image:url" content="https://www.beerstrot.it/asset/img/large/background-home.jpg"/>
 	<link rel="icon" href="https://www.beerstrot.it/asset/img/thumbs/favicon.png">
 	<link rel="canonical" href="https://www.beerstrot.it"/>
-	<link rel="stylesheet" href="css/app.css"/>
+	<link rel="stylesheet" href="https://www.beerstrot.it/css/app.css"/>
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css"/>
 	<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.2/css/all.css"/>
 	<link href="//cdnjs.cloudflare.com/ajax/libs/foundicons/3.0.0/foundation-icons.css" rel="stylesheet"/>
@@ -46,8 +46,8 @@
 </head>
 <body>
 <!-- inizio navbar con hamburger -->
-	<nav>
-        <ul class="menu1" id="hamburger">
+	<nav id="hamburger">
+        <ul class="menu1" >
             <li class="logo"><a href="https://www.beerstrot.it"><img class="img-logo" src="https://www.beerstrot.it/asset/img/svgs/logo.svg" alt="Ca' Vecchia Beerstrot"><meta itemprop="name" content="Ca' Vecchia Beerstrot"></a>
             </li>
             <li class="item button"><a href="https://www.beerstrot.it/prenota/">Riserva un Tavolo</a></li>
@@ -67,7 +67,7 @@
 		</div>
 	</header>
 <!-- fine header -->
-	<div class="panel-home-2n">
+	<!-- <div class="panel-home-2n">
 		<div class="row">
 			<div class="medium-6 large-6 medium-offset-6 large-offset-6 columns">
 				<h1>Estate</h1>
@@ -78,14 +78,14 @@
 				<a role="button" href="https://www.beerstrot.it/covid/"><img src="https://www.beerstrot.it/asset/img/medium/covid.jpg" alt="vista drone tavoli larghi" class="extra-space-image-tab-home"></a>
 			</div>
 			<div itemscope itemtype="http://schema.org/Restaurant" class="medium-6 medium-pull-6 large-6 large-pull-6 columns">
-				<p>Siamo aperti dal Martedì alla Domenica anche all'interno.</p><!-- <p>Il ristorante nel periodo estivo è aperto solo all'esterno.</p>
-				<p>In caso di pioggia o minaccia di pioggia il ristorante è chiuso e avviseremo tutti coloro che hanno prenotato della non apertura (tramite email).</p> -->
+				<p>Siamo aperti dal Giovedì alla Domenica.</p><!-- <p>Il ristorante nel periodo estivo è aperto solo all'esterno.</p>
+				<p>In caso di pioggia o minaccia di pioggia il ristorante è chiuso e avviseremo tutti coloro che hanno prenotato della non apertura (tramite email).</p>
 				<p>Non è consentito portare dolci, spumanti e simili dall'esterno.</p>
 				<p>All'esterno è consentito fumare solo nell'area preposta lontano dai tavoli.</p>
 				<span class="extra-space"><a role="button" href="https://www.beerstrot.it/prenota" class="button right">Riserva un Tavolo</a></span>
 			</div>
 		</div>
-	</div>
+	</div> -->
 	<div class="panel-home-n">
 		 <!-- <div class="row">
 			<div class="medium-12 large-12 columns">
@@ -100,24 +100,42 @@
 			</div>
 		</div>
 		<div class="row">
-			<div class="medium-6 large-6 columns">
+			<div class="medium-6 large-6 columns ">
 				<h2>Ristorante</h2>
-				<p><strong>Aperto dal Martedì alla Domenica</strong>.<br>Dalle <strong>19:00</strong> alle <strong>23:00</strong>.</p>
+				<ul class="orari-flex no-bullet">
+				    <li><span>Lunedì</span>		<span>Chiuso</span></li>
+				    <li><span>Martedì</span>	<span>Chiuso</span></li>
+				    <li><span>Mercoledì</span>	<span>Chiuso</span></li>
+				    <li><span>Giovedì</span>	<span>19 - 22</span></li>
+				    <li><span>Venerdì</span>	<span>19 - 22</span></li>
+				    <li><span>Sabato</span>		<span>19 - 23</span></li>
+				    <li><span>Domenica</span>	<span>19 - 22</span></li>
+				 </ul>
+				<!-- <p><strong>Aperto dal Giovedì alla Domenica</strong> dalle <strong>19:00</strong> alle <strong>22:00</strong><br>Il Sabato Dalle <strong>19:00</strong> alle <strong>23:00</strong>.</p> -->
 				<!-- <p>In caso di pioggia o minaccia di pioggia il ristorante è chiuso.</p> -->
-				<p>Riserva un tavolo direttamente online. <br>  <span class="subheader"><small>Nota bene: per gruppi di 13 persone o più chiama il numero <a role="button" href="tel:+390718853384"> 071 8853384</a></small></span></p>
-				<span class="extra-space"><a role="button" href="https://www.beerstrot.it/prenota" class="button right">Riserva un Tavolo</a></span>
+				<p>Riserva un tavolo direttamente online. <br>  <span class="subheader"><small>Nota bene: per gruppi di 15 persone o più chiama il numero <a role="button" href="tel:+390718853384"> 071 8853384</a></small></span></p>
+				<span class="extra-space"><a role="button" href="https://www.beerstrot.it/prenota" class="button left">Riserva un Tavolo</a></span>
 			</div>
 			<div class="medium-6 large-6 columns">
 				<span class="show-for-small extra-space-footer"><h2>Asporto</h2></span>
 				<span class="hide-for-small"><h2>Asporto</h2></span>
-				<p><strong>Aperto dal Martedì alla Domenica</strong>.<br>Dalle <strong>19:00</strong> alle <strong>22:00</strong>.</p>
+				<ul class="orari-flex no-bullet">
+				    <li><span>Lunedì</span>		<span>Chiuso</span></li>
+				    <li><span>Martedì</span>	<span>Chiuso</span></li>
+				    <li><span>Mercoledì</span>	<span>Chiuso</span></li>
+				    <li><span>Giovedì</span>	<span>19.00 - 21.30</span></li>
+				    <li><span>Venerdì</span>	<span>19.00 - 21.30</span></li>
+				    <li><span>Sabato</span>		<span>19.00 - 21.30</span></li>
+				    <li><span>Domenica</span>	<span>19.00 - 21.30</span></li>
+				 </ul>
+				<!-- <p>Aperto dal <strong>Giovedì</strong> alla <strong>Domenica</strong>.<br>Dalle <strong>19:00</strong> alle <strong>21:30</strong>.</p> -->
 				<!-- <p style="margin-bottom: 0px;" >Nota bene:</p>
 				<ul class="disc">
 					<li>Dato l'elevato afflusso di ospiti al ristorante, nei mesi di luglio e agosto non riusciamo a garantire asporti dopo le 19.30.</li>
 					<li>In caso di pioggia o minaccia di pioggia il ristorante è chiuso anche per gli asporti.</li>
 				</ul> -->
-				<span class="hide-for-small extra-space"><a role="button" href="tel:+390718853384" class="button right"><i class="fa fa-phone"></i> 071 8853384</a></span>
-                <span class="show-for-small extra-space"><a role="button" href="tel:+390718853384" class="button right"><i class="fa fa-phone"></i> Chiama</a></span>
+				<span class="hide-for-small extra-space"><a role="button" href="tel:+390718853384" class="button left"><i class="fa fa-phone"></i> 071 8853384</a></span>
+                <span class="show-for-small extra-space"><a role="button" href="tel:+390718853384" class="button left"><i class="fa fa-phone"></i> Chiama</a></span>
 			</div>
 			<!-- <div class="medium-6 large-6 columns">
 				<span class="show-for-small extra-space"></span>
@@ -199,12 +217,12 @@
                         <meta itemprop="openingHours" content="Thu, Wed, Th, Fr, Sa, Su 19:00-23:00">
                         <ul class="no-bullet">
                             <li class="testo-orari">Lunedì      <span class="orari">Chiuso</span></li>
-                            <li class="testo-orari">Martedì     <span class="orari">19 - 23</span></li>
-                            <li class="testo-orari">Mercoledì   <span class="orari">19 - 23</span></li>
-                            <li class="testo-orari">Giovedì     <span class="orari">19 - 23</span></li>
-                            <li class="testo-orari">Venerdì     <span class="orari">19 - 23</span></li>
+                            <li class="testo-orari">Martedì     <span class="orari">Chiuso</span></li>
+                            <li class="testo-orari">Mercoledì   <span class="orari">Chiuso</span></li>
+                            <li class="testo-orari">Giovedì     <span class="orari">19 - 22</span></li>
+                            <li class="testo-orari">Venerdì     <span class="orari">19 - 22</span></li>
                             <li class="testo-orari">Sabato      <span class="orari">19 - 23</span></li>
-                            <li class="testo-orari">Domenica    <span class="orari">19 - 23</span></li>
+                            <li class="testo-orari">Domenica    <span class="orari">19 - 22</span></li>
                         </ul>
                     </li>
 		  			<li>
