--- a/menu/index1.html
+++ b/menu/index1.html
@@ -45,9 +45,9 @@
 </head>
 <body>
 <!-- inizio navbar con hamburger -->
-    <nav>
+    <nav id="hamburger">
         <ul class="menu1" id="hamburger">
-            <li class="logo"><a href="https://www.beerstrot.it"><img class="img-logo" src="https://www.beerstrot.it/asset/img/svgs/logo.svg" alt="Ca' Vecchia Beerstrot"><meta itemprop="name" content="Ca' Vecchia Beerstrot"></a>
+            <li class="logo"><a href="https://www.beerstrot.it"><img class="img-logo" src="../asset/img/svgs/logo.svg" alt="Ca' Vecchia Beerstrot"><meta itemprop="name" content="Ca' Vecchia Beerstrot"></a>
             </li>
             <li class="item button"><a role="button" href="https://www.beerstrot.it/prenota/">Riserva un Tavolo</a></li>
             <li class="item attuale"><a href="https://www.beerstrot.it/menu/">Menù</a></li>
@@ -811,12 +811,12 @@
                         <meta itemprop="openingHours" content="Thu, Wed, Th, Fr, Sa, Su 19:00-23:00">
                         <ul class="no-bullet">
                             <li class="testo-orari">Lunedì      <span class="orari">Chiuso</span></li>
-                            <li class="testo-orari">Martedì     <span class="orari">19 - 23</span></li>
-                            <li class="testo-orari">Mercoledì   <span class="orari">19 - 23</span></li>
-                            <li class="testo-orari">Giovedì     <span class="orari">19 - 23</span></li>
-                            <li class="testo-orari">Venerdì     <span class="orari">19 - 23</span></li>
+                            <li class="testo-orari">Martedì     <span class="orari">Chiuso</span></li>
+                            <li class="testo-orari">Mercoledì   <span class="orari">Chiuso</span></li>
+                            <li class="testo-orari">Giovedì     <span class="orari">19 - 22</span></li>
+                            <li class="testo-orari">Venerdì     <span class="orari">19 - 22</span></li>
                             <li class="testo-orari">Sabato      <span class="orari">19 - 23</span></li>
-                            <li class="testo-orari">Domenica    <span class="orari">19 - 23</span></li>
+                            <li class="testo-orari">Domenica    <span class="orari">19 - 22</span></li>
                         </ul>
                     </li>
 		  			<li>
