--- a/asporto/index.html
+++ b/asporto/index.html
@@ -268,9 +268,9 @@
 							<small>Contiene: Anidride Solforosa e Solfiti, Glutine, Pesce, Semi di Sesamo</small></p>
 						</li>
 						<li>
-							<h3>Tagliata di Picanha<span class="price">19</span></h3>
-							<p>350 grammi di picanha di manzo. Servita su letto di rucola</p>
-						</li>
+                            <h3>Entrec&#244;te<span class="price">19</span></h3>
+                            <p>Entrec&#244;te di Manzetta Red Hereford irlandese</p>
+                        </li>
 					</ul>
 				</div>
 			</div>
