--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 	<meta property="og:image:url" content="https://www.beerstrot.it/asset/img/large/background-home.jpg"/>
 	<link rel="icon" href="https://www.beerstrot.it/asset/img/thumbs/favicon.png">
 	<link rel="canonical" href="https://www.beerstrot.it"/>
-	<link rel="stylesheet" href="https://www.beerstrot.it/css/app.css"/>
+	<link rel="stylesheet" href="css/app.css"/>
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css"/>
 	<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.2/css/all.css"/>
 	<link href="//cdnjs.cloudflare.com/ajax/libs/foundicons/3.0.0/foundation-icons.css" rel="stylesheet"/>
@@ -114,8 +114,13 @@
 				 </ul>
 				<!-- <p><strong>Aperto dal Giovedì alla Domenica</strong> dalle <strong>19:00</strong> alle <strong>22:00</strong><br>Il Sabato Dalle <strong>19:00</strong> alle <strong>23:00</strong>.</p> -->
 				<!-- <p>In caso di pioggia o minaccia di pioggia il ristorante è chiuso.</p> -->
-				<p>Riserva un tavolo direttamente online. <br>  <span class="subheader"><small>Nota bene: per gruppi di 15 persone o più chiama il numero <a role="button" href="tel:+390718853384"> 071 8853384</a></small></span></p>
+				<p>Riserva un tavolo direttamente online</p>
 				<span class="extra-space"><a role="button" href="https://www.beerstrot.it/prenota" class="button left">Riserva un Tavolo</a></span>
+				<div class="row">
+					<div class="medium-12 large-12 columns extra-space-hamburger">
+						<span class="subheader"><small>Nota bene: per gruppi di 15 persone o più chiama il numero <a role="button" href="tel:+390718853384"> 071 8853384</a></small></span>
+					</div>
+				</div>
 			</div>
 			<div class="medium-6 large-6 columns">
 				<span class="show-for-small extra-space-footer"><h2>Asporto</h2></span>
