--- a/index.html
+++ b/index.html
@@ -101,23 +101,27 @@
 			</div>
 		</div>
 		<div class="row">
-			<div class="medium-6 large-6 columns ">
-				<h2>Ristorante</h2>
-				<ul class="orari-flex no-bullet">
-				    <li><span>Lunedì</span>		<span>Chiuso</span></li>
-				    <li><span>Martedì</span>	<span>Chiuso</span></li>
-				    <li><span>Mercoledì</span>	<span>Chiuso</span></li>
-				    <li><span>Giovedì</span>	<span>19.00 - 22.00</span></li>
-				    <li><span>Venerdì</span>	<span>19.00 - 22.00</span></li>
-				    <li><span>Sabato</span>		<span>19.00 - 23.00</span></li>
-				    <li><span>Domenica</span>	<span>19.00 - 22.00</span></li>
-				 </ul>
-				<!-- <p><strong>Aperto dal Giovedì alla Domenica</strong> dalle <strong>19:00</strong> alle <strong>22:00</strong><br>Il Sabato Dalle <strong>19:00</strong> alle <strong>23:00</strong>.</p> -->
-				<!-- <p>In caso di pioggia o minaccia di pioggia il ristorante è chiuso.</p> -->
-				<p>Riserva un tavolo direttamente online</p>
-				<span class="extra-space"><a role="button" href="https://www.beerstrot.it/prenota" class="button left">Riserva un Tavolo</a></span>
+			<div class="medium-6 large-6 end columns">
+			<h2>Ristorante</h2>
 				<div class="row">
-					<div class="medium-12 large-12 columns extra-space-hamburger">
+					<div class="small-12 columns ">
+						<ul class="orari-flex no-bullet">
+						    <li><span>Lunedì</span>		<span>Chiuso</span></li>
+						    <li><span>Martedì</span>	<span>Chiuso</span></li>
+						    <li><span>Mercoledì</span>	<span>Chiuso</span></li>
+						    <li><span>Giovedì</span>	<span>19.00 - 22.00</span></li>
+						    <li><span>Venerdì</span>	<span>19.00 - 22.00</span></li>
+						    <li><span>Sabato</span>		<span>19.00 - 23.00</span></li>
+						    <li><span>Domenica</span>	<span>19.00 - 22.00</span></li>
+						 </ul>
+						<!-- <p><strong>Aperto dal Giovedì alla Domenica</strong> dalle <strong>19:00</strong> alle <strong>22:00</strong><br>Il Sabato Dalle <strong>19:00</strong> alle <strong>23:00</strong>.</p> -->
+						<!-- <p>In caso di pioggia o minaccia di pioggia il ristorante è chiuso.</p> -->
+						<p>Riserva un tavolo direttamente online</p>
+						<span class="extra-space"><a role="button" href="https://www.beerstrot.it/prenota" class="button left">Riserva un Tavolo</a></span>
+					</div>
+				</div>
+				<div class="row">
+					<div class="small-12 columns extra-space-hamburger end">
 						<span class="subheader"><small>Nota bene: per gruppi di 15 persone o più chiama il numero <a role="button" href="tel:+390718853384"> 071 8853384</a></small></span>
 					</div>
 				</div>
