--- a/index.html
+++ b/index.html
@@ -121,8 +121,8 @@
 					</div>
 				</div>
 				<div class="row">
-					<div class="small-12 columns extra-space-hamburger end">
-						<span class="subheader"><small>Nota bene: per gruppi di 15 persone o più chiama il numero <a role="button" href="tel:+390718853384"> 071 8853384</a></small></span>
+					<div class="small-8 columns extra-space-hamburger end">
+						<span class="sottobottone"><p><strong>Nota bene</strong>: per gruppi di 15 persone o più chiama il numero <a role="button" href="tel:+390718853384"> 071 8853384</a></p></span>
 					</div>
 				</div>
 			</div>
