--- a/_old_file/eventi/cena-san-martino.html
+++ b/_old_file/eventi/cena-san-martino.html
@@ -84,7 +84,7 @@
                 <p>Per la sarata di San Martino di Venerdì 11 Novembre abbiamo creato un <strong>menù speciale a 20€ </strong>bere escluso.</p>
                 <p>Solo su prenotazone.</p>
                 <span class="show-for-small"><a role="button" href="tel:+390718853384" class="button right"><i class="fa fa-phone"></i> Prenota</a></span>
-            <span class="hide-for-small"><a role="button" href="tel:+390718853384" class="button"><i class="fa fa-phone"></i> 071 8853384</a></span>
+            <span class="hide-for-small"><a role="button" href="tel:+390718853384" class="button"><i class="fa fa-phone"></i> 071&nbsp;8853384</a></span>
                 <hr>
                 <h2>Menù</h2>
                 <ul>
@@ -94,7 +94,7 @@
                     <li>Caffè e castagne</li>
                 </ul>
                 <span class="show-for-small"><a role="button" href="tel:+390718853384" class="button right"><i class="fa fa-phone"></i> Prenota</a></span>
-                <span class="hide-for-small"><a role="button" href="tel:+390718853384" class="button"><i class="fa fa-phone"></i> 071 8853384</a></span>
+                <span class="hide-for-small"><a role="button" href="tel:+390718853384" class="button"><i class="fa fa-phone"></i> 071&nbsp;8853384</a></span>
                 <hr>
             </div>
         </article>
@@ -141,7 +141,7 @@
 		  			<li>
                         <h4 class="subheader">Contatti</h4>
                         <p><a href="https://www.beerstrot.it/prenota/">Riserva un Tavolo</a></p>
-                        <p><a href="tel:+390718853384"><i class="fa fa-phone"></i><span itemprop="telephone"> 071 8853384</span></a></p>
+                        <p><a href="tel:+390718853384"><i class="fa fa-phone"></i><span itemprop="telephone"> 071&nbsp;8853384</span></a></p>
                     </li>
 		  			<!-- <li>
                        	<h4 class="subheader">Orari</h4>
