--- a/_old_file/eventi/instagramer.html
+++ b/_old_file/eventi/instagramer.html
@@ -128,7 +128,7 @@
 		  			<li>
                         <h4 class="subheader">Contatti</h4>
                         <p><a href="https://www.beerstrot.it/prenota/">Riserva un Tavolo</a></p>
-                        <p><a href="tel:+390718853384"><i class="fa fa-phone"></i><span itemprop="telephone"> 071 8853384</span></a></p>
+                        <p><a href="tel:+390718853384"><i class="fa fa-phone"></i><span itemprop="telephone"> 071&nbsp;8853384</span></a></p>
                     </li>
 		  			<!-- <li>
                        	<h4 class="subheader">Orari</h4>
