--- a/_old_file/eventi/san-silvestro-2016.html
+++ b/_old_file/eventi/san-silvestro-2016.html
@@ -100,7 +100,7 @@
                 <p>Il filo conduttore del menù è molto semplice: abbiamo preso i migliori salumifici e caseifici locali e delle colline di Modena, una "vergara" di San Vittore di Cingoli, li abbiamo uniti con un unico meraviglioso ingrediente: l'<strong>Aceto Balsamico Extra Vecchio di Modena</strong>.</p>
                 <p>Prenotazone richiesta.</p>
                 <span class="show-for-small"><a role="button" href="tel:+390718853384" class="button right"><i class="fa fa-phone"></i> Prenota</a></span>
-                <span class="hide-for-small"><a role="button" href="tel:+390718853384" class="button"><i class="fa fa-phone"></i> 071 8853384</a></span>
+                <span class="hide-for-small"><a role="button" href="tel:+390718853384" class="button"><i class="fa fa-phone"></i> 071&nbsp;8853384</a></span>
                 <hr>
                 <h2>Menù</h2>
                 <h3 class="subheader">Antipasto</h3>
@@ -145,7 +145,7 @@
                     <li>Panettone Artigianale della Pasticceria  Giuliodori di Filottrano</li>
                 </ul>
                 <span class="show-for-small"><a role="button" href="tel:+390718853384" class="button right"><i class="fa fa-phone"></i> Prenota</a></span>
-                <span class="hide-for-small"><a role="button" href="tel:+390718853384" class="button"><i class="fa fa-phone"></i> 071 8853384</a></span>
+                <span class="hide-for-small"><a role="button" href="tel:+390718853384" class="button"><i class="fa fa-phone"></i> 071&nbsp;8853384</a></span>
                 <hr>
             </div>
         </article>
@@ -192,7 +192,7 @@
 		  			<li>
                         <h4 class="subheader">Contatti</h4>
                         <p><a href="https://www.beerstrot.it/prenota/">Riserva un Tavolo</a></p>
-                        <p><a href="tel:+390718853384"><i class="fa fa-phone"></i><span itemprop="telephone"> 071 8853384</span></a></p>
+                        <p><a href="tel:+390718853384"><i class="fa fa-phone"></i><span itemprop="telephone"> 071&nbsp;8853384</span></a></p>
                     </li>
 		  			<!-- <li>
                        	<h4 class="subheader">Orari</h4>
