--- a/_old_file/file_scartati_prenota/index_homePage_old.html
+++ b/_old_file/file_scartati_prenota/index_homePage_old.html
@@ -145,7 +145,7 @@
 				<h2>Asporto</h2>
 				<p><strong>Tutti i giorni</strong>.<br>Dalle <strong>19:00</strong> alle <strong>22:00</strong>.</p>
 				<p>In caso di pioggia o minaccia di pioggia il ristorante è chiuso anche per gli asporti.</p>
-				<span class="hide-for-small extra-spac"><a role="button" href="tel:+390718853384" class="button right extra-space-aside-tab-immagini"><i class="fa fa-phone"></i> 071 8853384</a></span>
+				<span class="hide-for-small extra-spac"><a role="button" href="tel:+390718853384" class="button right extra-space-aside-tab-immagini"><i class="fa fa-phone"></i> 071&nbsp;8853384</a></span>
                 		<span class="show-for-small extra-space"><a role="button" href="tel:+390718853384" class="button right extra-space-aside-tab-immagini"><i class="fa fa-phone"></i> Chiama</a></span>
 			</div>
 			<!-- <div class="medium-6 large-6 columns">
@@ -255,7 +255,7 @@
 				<ul class="small-block-grid-2 medium-block-grid-4 large-block-grid-4">
 					<li>
 						<h4 class="subheader">Prenota</h4>
-						<p><a href="tel:+390718853384"><i class="fa fa-phone"></i><span itemprop="telephone"> 071 8853384</span></a></p>
+						<p><a href="tel:+390718853384"><i class="fa fa-phone"></i><span itemprop="telephone"> 071&nbsp;8853384</span></a></p>
 						<p><a href="https://m.me/cavecchiabeerstrot"><i class="fab fa-facebook-messenger"></i>Richiedi Prenotazione</a></p>
 					</li>
 					<!-- <li>
