--- a/asporto/index.html
+++ b/asporto/index.html
@@ -78,7 +78,7 @@
 				</ul> -->
 				<!-- <h4><strong>Giovedì</strong>, <strong>Venerdì</strong>, <strong>Domenica</strong>: dalle 19:00 alle 22:00</h4>
 				<h4><strong>Sabato</strong>: dalle 19:00 alle 20:00</strong></h4> -->
-				<span class="hide-for-small"><a role="button" href="tel:+390718853384" class="button left extra-space-aside-tab-immagini"><i class="fa fa-phone"></i> 071 8853384</a></span>
+				<span class="hide-for-small"><a role="button" href="tel:+390718853384" class="button left extra-space-aside-tab-immagini"><i class="fa fa-phone"></i> 071&nbsp;8853384</a></span>
 				<span class="show-for-small"><a role="button" href="tel:+390718853384" class="button left extra-space-aside-tab-immagini"><i class="fa fa-phone"></i> Chiama</a></span>
 			</div>
 			<div class="medium-12 large-12 columns extra-space">
@@ -332,7 +332,7 @@
 <!-- call to action inizio -->
 		<div class="row">
 			<div class="medium-12 large-12 columns">
-				<span class="hide-for-small"><a role="button" href="tel:+390718853384" class="button right extra-space-aside-tab-immagini"><i class="fa fa-phone"></i> 071 8853384</a></span>
+				<span class="hide-for-small"><a role="button" href="tel:+390718853384" class="button right extra-space-aside-tab-immagini"><i class="fa fa-phone"></i> 071&nbsp;8853384</a></span>
 				<span class="show-for-small"><a role="button" href="tel:+390718853384" class="button right extra-space-aside-tab-immagini"><i class="fa fa-phone"></i> Chiama</a></span>
 			</div>
 		</div>
@@ -347,7 +347,7 @@
 					<li>
                         <h4 class="subheader">Contatti</h4>
                         <p><a href="https://www.beerstrot.it/prenota/">Riserva un Tavolo</a></p>
-                        <p><a href="tel:+390718853384"><i class="fa fa-phone"></i><span itemprop="telephone"> 071 8853384</span></a></p>
+                        <p><a href="tel:+390718853384"><i class="fa fa-phone"></i><span itemprop="telephone"> 071&nbsp;8853384</span></a></p>
                     </li>
                     <li>
                         <h4 class="subheader">Orari</h4>
