--- a/index.html
+++ b/index.html
@@ -105,14 +105,14 @@
 			<h2>Ristorante</h2>
 				<div class="row">
 					<div class="small-12 columns ">
-						<ul class="orari-flex no-bullet">
-						    <li><span>Lunedì</span>		<span>Chiuso</span></li>
-						    <li><span>Martedì</span>	<span>Chiuso</span></li>
-						    <li><span>Mercoledì</span>	<span>Chiuso</span></li>
-						    <li><span>Giovedì</span>	<span>19.00 - 22.00</span></li>
-						    <li><span>Venerdì</span>	<span>19.00 - 22.00</span></li>
-						    <li><span>Sabato</span>		<span>19.00 - 23.00</span></li>
-						    <li><span>Domenica</span>	<span>19.00 - 22.00</span></li>
+						<ul class="orari-schedule no-bullet">
+						    <li><span>Lunedì:</span>chiuso</li>
+						    <li><span>Martedì:</span>chiuso</li>
+						    <li><span>Mercoledì:</span>chiuso</li>
+						    <li><span>Giovedì:</span>19.00 - 22.00</li>
+						    <li><span>Venerdì:</span>19.00 - 22.00</li>
+						    <li><span>Sabato:</span>19.00 - 23.00</li>
+						    <li><span>Domenica:</span>19.00 - 22.00</li>
 						 </ul>
 						<!-- <p><strong>Aperto dal Giovedì alla Domenica</strong> dalle <strong>19:00</strong> alle <strong>22:00</strong><br>Il Sabato Dalle <strong>19:00</strong> alle <strong>23:00</strong>.</p> -->
 						<!-- <p>In caso di pioggia o minaccia di pioggia il ristorante è chiuso.</p> -->
@@ -121,30 +121,30 @@
 					</div>
 				</div>
 				<div class="row">
-					<div class="small-8 columns extra-space-hamburger end">
-						<span class="sottobottone"><p><strong>Nota bene</strong>: per gruppi di 15 persone o più chiama il numero <a role="button" href="tel:+390718853384"> 071 8853384</a></p></span>
+					<div class="small-12 columns extra-space-hamburger end">
+						<span class="sottobottone"><p><strong>Nota bene</strong>: per gruppi di 15 persone o più chiama	il numero<a role="button" href="tel:+390718853384"> 071&nbsp;8853384</a></p></span>
 					</div>
 				</div>
 			</div>
 			<div class="medium-6 large-6 columns">
 				<span class="show-for-small extra-space-footer"><h2>Asporto</h2></span>
 				<span class="hide-for-small"><h2>Asporto</h2></span>
-				<ul class="orari-flex no-bullet">
-				    <li><span>Lunedì</span>		<span>Chiuso</span></li>
-				    <li><span>Martedì</span>	<span>Chiuso</span></li>
-				    <li><span>Mercoledì</span>	<span>Chiuso</span></li>
-				    <li><span>Giovedì</span>	<span>19.00 - 21.30</span></li>
-				    <li><span>Venerdì</span>	<span>19.00 - 21.30</span></li>
-				    <li><span>Sabato</span>		<span>19.00 - 21.30</span></li>
-				    <li><span>Domenica</span>	<span>19.00 - 21.30</span></li>
-				 </ul>
+				<ul class="orari-schedule no-bullet">
+						    <li><span>Lunedì:</span>chiuso</li>
+						    <li><span>Martedì:</span>chiuso</li>
+						    <li><span>Mercoledì:</span>chiuso</li>
+						    <li><span>Giovedì:</span>19.00 - 21.30</li>
+						    <li><span>Venerdì:</span>19.00 - 21.30</li>
+						    <li><span>Sabato:</span>19.00 - 21.30</li>
+						    <li><span>Domenica:</span>19.00 - 21.30</li>
+						 </ul>
 				<!-- <p>Aperto dal <strong>Giovedì</strong> alla <strong>Domenica</strong>.<br>Dalle <strong>19:00</strong> alle <strong>21:30</strong>.</p> -->
 				<!-- <p style="margin-bottom: 0px;" >Nota bene:</p>
 				<ul class="disc">
 					<li>Dato l'elevato afflusso di ospiti al ristorante, nei mesi di luglio e agosto non riusciamo a garantire asporti dopo le 19.30.</li>
 					<li>In caso di pioggia o minaccia di pioggia il ristorante è chiuso anche per gli asporti.</li>
 				</ul> -->
-				<span class="hide-for-small extra-space"><a role="button" href="tel:+390718853384" class="button left"><i class="fa fa-phone"></i> 071 8853384</a></span>
+				<span class="hide-for-small extra-space"><a role="button" href="tel:+390718853384" class="button left"><i class="fa fa-phone"></i> 071&nbsp;8853384</a></span>
                 <span class="show-for-small extra-space"><a role="button" href="tel:+390718853384" class="button left"><i class="fa fa-phone"></i> Chiama</a></span>
 			</div>
 			<!-- <div class="medium-6 large-6 columns">
@@ -220,7 +220,7 @@
 					<li>
                         <h4 class="subheader">Contatti</h4>
                         <p><a href="https://www.beerstrot.it/prenota/">Riserva un Tavolo</a></p>
-                        <p><a href="tel:+390718853384"><i class="fa fa-phone"></i><span itemprop="telephone"> 071 8853384</span></a></p>
+                        <p><a href="tel:+390718853384"><i class="fa fa-phone"></i><span itemprop="telephone"> 071&nbsp;8853384</span></a></p>
                     </li>
                     <li>
                         <h4 class="subheader">Orari</h4>
