--- a/indexaccordion.html
+++ b/indexaccordion.html
@@ -127,7 +127,7 @@
 				<h2>Ristorante</h2>
 				<p><strong>Aperto tutti i giorni, solo all'esterno</strong>.<br>Dalle <strong>19:00</strong> alle <strong>23:00</strong>.</p>
 				<p>In caso di pioggia o minaccia di pioggia il ristorante è chiuso.</p>
-				<p>Riserva un tavolo direttamente online. <br>  <span class="subheader"><small>Nota bene: per gruppi di 13 persone o più chiama il numero <a role="button" href="tel:+390718853384"> 071 8853384</a></small></span></p>
+				<p>Riserva un tavolo direttamente online. <br>  <span class="subheader"><small>Nota bene: per gruppi di 13 persone o più chiama il numero <a role="button" href="tel:+390718853384"> 071&nbsp;8853384</a></small></span></p>
 				<span class="extra-space"><a role="button" href="https://www.beerstrot.it/prenota" class="button right">Riserva un Tavolo</a></span>
 			</div>
 			<div class="medium-6 large-6 columns">
@@ -139,7 +139,7 @@
 					<li>Dato l'elevato afflusso di ospiti al ristorante, nei mesi di luglio e agosto non riusciamo a garantire asporti dopo le 19.30.</li>
 					<li>In caso di pioggia o minaccia di pioggia il ristorante è chiuso anche per gli asporti.</li>
 				</ul>
-				<span class="hide-for-small extra-space"><a role="button" href="tel:+390718853384" class="button right"><i class="fa fa-phone"></i> 071 8853384</a></span>
+				<span class="hide-for-small extra-space"><a role="button" href="tel:+390718853384" class="button right"><i class="fa fa-phone"></i> 071&nbsp;8853384</a></span>
                 <span class="show-for-small extra-space"><a role="button" href="tel:+390718853384" class="button right"><i class="fa fa-phone"></i> Chiama</a></span>
 			</div>
 			<!-- <div class="medium-6 large-6 columns">
@@ -280,7 +280,7 @@
 					<li>
                         <h4 class="subheader">Contatti</h4>
                         <p><a href="https://www.beerstrot.it/prenota/">Riserva un Tavolo</a></p>
-                        <p><a href="tel:+390718853384"><i class="fa fa-phone"></i><span itemprop="telephone"> 071 8853384</span></a></p>
+                        <p><a href="tel:+390718853384"><i class="fa fa-phone"></i><span itemprop="telephone"> 071&nbsp;8853384</span></a></p>
                     </li>
                     <li>
                         <h4 class="subheader">Orari</h4>
