--- a/menu/index.html
+++ b/menu/index.html
@@ -22,7 +22,7 @@
     <meta property="og:image:url" content="https://www.beerstrot.it/asset/img/large/menu.jpg"/>
     <link rel="icon" href="https://www.beerstrot.it/asset/img/thumbs/favicon.png">
     <link rel="canonical" href="https://www.beerstrot.it/menu/"/>
-    <link rel="stylesheet" href="../css/app.css"/>
+    <link rel="stylesheet" href="https://www.beerstrot.it/css/app.css"/>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.2/css/all.css"/>
     <link href="//cdnjs.cloudflare.com/ajax/libs/foundicons/3.0.0/foundation-icons.css" rel="stylesheet"/>
@@ -808,7 +808,7 @@
 					<li>
                         <h4 class="subheader">Contatti</h4>
                         <p><a href="https://www.beerstrot.it/prenota/">Riserva un Tavolo</a></p>
-                        <p><a href="tel:+390718853384"><i class="fa fa-phone"></i><span itemprop="telephone"> 071 8853384</span></a></p>
+                        <p><a href="tel:+390718853384"><i class="fa fa-phone"></i><span itemprop="telephone"> 071&nbsp;8853384</span></a></p>
                     </li>
                     <li>
                         <h4 class="subheader">Orari</h4>
