--- a/_old_file/eventi/pasqua.html
+++ b/_old_file/eventi/pasqua.html
@@ -99,7 +99,7 @@
                 <p>Per il pranzo del 27 e 28 Marzo abbiamo preparato un <strong>menù speciale</strong> a 30€ inclusi acqua, vino della casa e birra artigianale.</p>
                 <p>Prenotazone richiesta entro il 23 Marzo.<br>Affrettati: abbiamo solo 30 posti disponibili.</p>
                 <span class="show-for-small"><a role="button" href="tel:+390718853384" class="button right"><i class="fa fa-phone"></i> Prenota</a></span>
-                <span class="hide-for-small"><a role="button" href="tel:+390718853384" class="button"><i class="fa fa-phone"></i> 071 8853384</a></span>
+                <span class="hide-for-small"><a role="button" href="tel:+390718853384" class="button"><i class="fa fa-phone"></i> 071&nbsp;8853384</a></span>
                 <hr>
                 <h2>Menù</h2>
                 <h3 class="subheader">Antipasti</h3>
@@ -129,7 +129,7 @@
                     <li>Bibita</li>
                 </ul>
                 <span class="show-for-small"><a role="button" href="tel:+390718853384" class="button right"><i class="fa fa-phone"></i> Prenota</a></span>
-                <span class="hide-for-small"><a role="button" href="tel:+390718853384" class="button"><i class="fa fa-phone"></i> 071 8853384</a></span>
+                <span class="hide-for-small"><a role="button" href="tel:+390718853384" class="button"><i class="fa fa-phone"></i> 071&nbsp;8853384</a></span>
                 <hr>
             </div>
         </article>
@@ -176,7 +176,7 @@
 		  			<li>
                         <h4 class="subheader">Contatti</h4>
                         <p><a href="https://www.beerstrot.it/prenota/">Riserva un Tavolo</a></p>
-                        <p><a href="tel:+390718853384"><i class="fa fa-phone"></i><span itemprop="telephone"> 071 8853384</span></a></p>
+                        <p><a href="tel:+390718853384"><i class="fa fa-phone"></i><span itemprop="telephone"> 071&nbsp;8853384</span></a></p>
                     </li>
 		  			<!-- <li>
                        	<h4 class="subheader">Orari</h4>
