--- a/_old_file/file_scartati_prenota/index_menu_old.html
+++ b/_old_file/file_scartati_prenota/index_menu_old.html
@@ -804,7 +804,7 @@
                 <ul class="small-block-grid-2 medium-block-grid-4 large-block-grid-4">
                     <li>
                         <h4 class="subheader">Prenota</h4>
-                        <p><a href="tel:+390718853384"><i class="fa fa-phone"></i><span itemprop="telephone"> 071 8853384</span></a></p>
+                        <p><a href="tel:+390718853384"><i class="fa fa-phone"></i><span itemprop="telephone"> 071&nbsp;8853384</span></a></p>
                         <p><a href="https://m.me/cavecchiabeerstrot"><i class="fab fa-facebook-messenger"></i>Richiedi Prenotazione</a></p>
                     </li>
                     <!-- <li>
