--- a/_old_file/menu/birra/ape-regina.html
+++ b/_old_file/menu/birra/ape-regina.html
@@ -149,7 +149,7 @@
             <div class="small-6 medium-3 large-3 columns" itemscope itemtype="http://schema.org/Restaurant">
                 <h4 class="subheader">Prenota</h4>
                 <p>
-                    <a href="tel:+390718853384"><i class="fa fa-phone"></i><span itemprop="telephone"> 071 8853384</span></a>
+                    <a href="tel:+390718853384"><i class="fa fa-phone"></i><span itemprop="telephone"> 071&nbsp;8853384</span></a>
                 </p>
                 <p>
                     <a href="https://m.me/cavecchiabeerstrot"><i class="fab fa-facebook-messenger"></i>Prenota Online</a>
