--- a/_old_file/menu/birra/breaking-hops-double-ipa.html
+++ b/_old_file/menu/birra/breaking-hops-double-ipa.html
@@ -122,7 +122,7 @@
                     <li>
                         <h4 class="subheader">Prenota</h4>
                         <p>
-                            <a href="tel:+390718853384"><i class="fa fa-phone"></i><span itemprop="telephone"> 071 8853384</span></a>
+                            <a href="tel:+390718853384"><i class="fa fa-phone"></i><span itemprop="telephone"> 071&nbsp;8853384</span></a>
                             <br>
                             <a href="https://m.me/cavecchiabeerstrot"><i class="fab fa-facebook-messenger"></i>Prenota Online</a>
                         </p>
