--- a/prenota/email_template.html
+++ b/prenota/email_template.html
@@ -234,7 +234,7 @@
                                                 <div style="font-size:12pt;margin:0cm 0cm 0.0001pt">
                                                   <span style="font-size:10pt;">T.</span>
                                                   <span style="font-size:10pt">&nbsp;</span>
-                                                  <a href="tel:+390718853384" style="text-decoration:none; color:#e00c10; font-size:10pt;"><span itemprop="telephone">+39 071 8853384</span></a>
+                                                  <a href="tel:+390718853384" style="text-decoration:none; color:#e00c10; font-size:10pt;"><span itemprop="telephone">+39 071&nbsp;8853384</span></a>
                                                 </div>
                                                 <div style="font-size:12pt;margin:0cm 0cm 0.0001pt">
                                                   <span style="font-size:10pt">E.</span>
