add schedule class

--- a/404.html
+++ b/404.html
@@ -47,16 +47,15 @@
                     </li>
                     <li>
                         <h4 class="subheader">Orari</h4>
-                        <meta itemprop="openingHours" content="Thu, Wed, Th, Fr, Sa, Su 19:00-23:00">
-                        <ul class="no-bullet">
-                            <li class="testo-orari">Lunedì      <span class="orari">Chiuso</span></li>
-                            <li class="testo-orari">Martedì     <span class="orari">Chiuso</span></li>
-                            <li class="testo-orari">Mercoledì   <span class="orari">Chiuso</span></li>
-                            <li class="testo-orari">Giovedì     <span class="orari">19 - 22</span></li>
-                            <li class="testo-orari">Venerdì     <span class="orari">19 - 22</span></li>
-                            <li class="testo-orari">Sabato      <span class="orari">19 - 23</span></li>
-                            <li class="testo-orari">Domenica    <span class="orari">19 - 22</span></li>
-                        </ul>
+                        <ul class="orari-footer-schedule no-bullet">
+                            <li><span>Lunedì:</span>chiuso</li>
+                            <li><span>Martedì:</span>chiuso</li>
+                            <li><span>Mercoledì:</span>chiuso</li>
+                            <li><span>Giovedì:</span>19 - 22</li>
+                            <li><span>Venerdì:</span>19 - 22</li>
+                            <li><span>Sabato:</span>19 - 23</li>
+                            <li><span>Domenica:</span>19 - 22</li>
+                         </ul>
                     </li>
 		  			<li>
 		  				<h4 class="subheader">Dove siamo</h4>
