--- a/asporto/index.html
+++ b/asporto/index.html
@@ -332,8 +332,8 @@
 <!-- call to action inizio -->
 		<div class="row">
 			<div class="medium-12 large-12 columns">
-				<span class="hide-for-small"><a role="button" href="tel:+390718853384" class="button right extra-space-aside-tab-immagini"><i class="fa fa-phone"></i> 071&nbsp;8853384</a></span>
-				<span class="show-for-small"><a role="button" href="tel:+390718853384" class="button right extra-space-aside-tab-immagini"><i class="fa fa-phone"></i> Chiama</a></span>
+				<span class="hide-for-small"><a role="button" href="tel:+390718853384" class="button left extra-space-aside-tab-immagini"><i class="fa fa-phone"></i> 071&nbsp;8853384</a></span>
+				<span class="show-for-small"><a role="button" href="tel:+390718853384" class="button left extra-space-aside-tab-immagini"><i class="fa fa-phone"></i> Chiama</a></span>
 			</div>
 		</div>
 <!-- call to action fine -->
