--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@
 				</div>
 				<div class="row">
 					<div class="small-12 columns extra-space-hamburger end">
-						<span class="sottobottone"><p><strong>Nota bene</strong>: per gruppi di 15 persone o più chiama	il numero<a role="button" href="tel:+390718853384"> 071&nbsp;8853384</a></p></span>
+						<span class="sottobottone"><p><strong>Nota bene</strong>: per 15 persone o più chiama il numero<a role="button" href="tel:+390718853384"> 071&nbsp;8853384</a></p></span>
 					</div>
 				</div>
 			</div>
