--- a/menu/index1.html
+++ b/menu/index1.html
@@ -53,7 +53,7 @@
             <li class="item attuale"><a href="https://www.beerstrot.it/menu/">Menù</a></li>
             <li class="item"><a href="https://www.beerstrot.it/asporto/">Asporto</a></li>
             <li class="item"><a href="https://www.beerstrot.it/contatti/">Contatti</a></li>
-            <li class="toggle"><a href="javascript:void(0)"><i class="fa-light fa-bars"></i></a></li>
+            <li class="toggle"><a href="javascript:void(0)"><i class="fas fa-bars"></i></a></li>
         </ul>
     </nav>
 <!-- fine navbar con hamburger -->
