--- a/menu/index.html
+++ b/menu/index.html
@@ -225,7 +225,7 @@
                         </li>  -->
                         <li>
                             <h3>Mantovano<span class="price">11,9 / doppio 15,9</span></h3>
-                            <p>Manzo, gorgonzola, crema di zucca, Amaretto, speck croccante
+                            <p>Manzo, gorgonzola, crema di zucca, amaretto, speck croccante
                             <small>Contiene: Frutta a Guscio, Glutine, Latte, Uova</small></p>
                         </li>
                        <!-- <li>
