--- a/menu/index.html
+++ b/menu/index.html
@@ -323,7 +323,7 @@
                                 <p>Tiramisù con mascarpone artigianale alla birra stout
                                 <small>Contiene: Glutine, Latte, Uova</small></p>
                             </li>
-			    <li>
+			                <li>
                                 <h3>Whoop<span class="price">5</span></h3>
                                 <p>Morbido biscotto al cioccolato ripieno di burro di arachidi
                                 <small>Contiene: Arachidi, Glutine, Latte, Uova</small></p>
@@ -736,7 +736,7 @@
             </div>
         </section>
 <!-- Liquori fine -->
-<!-- vino -->
+<!-- Drinks -->
         <section class="content" role="tabpanel" aria-hidden="false" id="drinks">
             <div class="row">
                 <div class="large-12 medium-12 small-12 columns">
