--- a/asporto/index.html
+++ b/asporto/index.html
@@ -78,8 +78,8 @@
 				</ul> -->
 				<!-- <h4><strong>Giovedì</strong>, <strong>Venerdì</strong>, <strong>Domenica</strong>: dalle 19:00 alle 22:00</h4>
 				<h4><strong>Sabato</strong>: dalle 19:00 alle 20:00</strong></h4> -->
-				<span class="hide-for-small"><a role="button" href="tel:+390718853384" class="button left extra-space-aside-tab-immagini"><i class="fa fa-phone"></i> 071&nbsp;8853384</a></span>
-				<span class="show-for-small"><a role="button" href="tel:+390718853384" class="button left extra-space-aside-tab-immagini"><i class="fa fa-phone"></i> Chiama</a></span>
+				<span class="hide-for-small"><a role="button" href="tel:+390718853384" class="button right extra-space-aside-tab-immagini"><i class="fa fa-phone"></i> 071&nbsp;8853384</a></span>
+				<span class="show-for-small"><a role="button" href="tel:+390718853384" class="button right extra-space-aside-tab-immagini"><i class="fa fa-phone"></i> Chiama</a></span>
 			</div>
 			<div class="medium-12 large-12 columns extra-space">
 				<hr>
@@ -527,8 +527,8 @@
 <!-- call to action inizio -->
 		<div class="row">
 			<div class="medium-12 large-12 columns">
-				<span class="hide-for-small"><a role="button" href="tel:+390718853384" class="button left extra-space-aside-tab-immagini"><i class="fa fa-phone"></i> 071&nbsp;8853384</a></span>
-				<span class="show-for-small"><a role="button" href="tel:+390718853384" class="button left extra-space-aside-tab-immagini"><i class="fa fa-phone"></i> Chiama</a></span>
+				<span class="hide-for-small"><a role="button" href="tel:+390718853384" class="button right extra-space-aside-tab-immagini"><i class="fa fa-phone"></i> 071&nbsp;8853384</a></span>
+				<span class="show-for-small"><a role="button" href="tel:+390718853384" class="button right extra-space-aside-tab-immagini"><i class="fa fa-phone"></i> Chiama</a></span>
 			</div>
 		</div>
 <!-- call to action fine -->
